# gird

./: .gitignore  CHANGES.md  LICENSE  README.md  girdfile.py  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  publish.yml  pull-request.yml  test.yml
gird/: __init__.py  common.py  dependency.py  gird.py  girddir.py  girdfile.py  girdpath.py  makefile.py  ninjaconvert.py  object.py  rule.py  rulesorter.py  run.py  utils.py
scripts/: README_template.md  __init__.py  get_wheel_path.py  render_readme.py
test/benchmark/: Makefile  benchmark.py  girdfile.py
test/functional/: conftest.py
test/functional/test_cli/: girdfile.py  girdfile2.py  test_cli.py
test/functional/test_dep_compound/: girdfile.py  test_dep_compound.py
test/functional/test_dep_function/: girdfile.py  test_dep_function.py
test/functional/test_dep_path/: test_dep_path.py
test/functional/test_dep_rule_path/: girdfile.py  test_dep_rule_path.py
test/functional/test_dep_rule_phony/: girdfile.py  test_dep_rule_phony.py
test/functional/test_dep_timestamped/: girdfile.py  test_dep_timestamped.py
test/functional/test_dry_run/: test_dry_run.py
test/functional/test_girdfile_import/: girdfile.py  test_girdfile_import.py
test/functional/test_girdfile_import/package/: __init__.py
test/functional/test_graph/: girdfile.py  test_graph.py
test/functional/test_makefile/: Makefile1  Makefile2  girdfile.py  test_makefile.py
test/functional/test_ninja/: build1.ninja  build2.ninja  girdfile.py  test_ninja.py
test/functional/test_parallel/: girdfile.py  test_parallel.py
test/functional/test_question/: girdfile.py  test_question.py
test/functional/test_recipe_compound/: girdfile.py  test_recipe_compound.py
test/functional/test_recipe_function/: girdfile.py  test_recipe_function.py
test/functional/test_recipe_string/: girdfile.py  test_recipe_string.py
test/functional/test_target_path/: girdfile.py  test_target_path.py
test/functional/test_target_path_duplicate/: girdfile.py  test_target_path_duplicate.py
test/functional/test_target_phony/: girdfile.py  test_target_phony.py
test/functional/test_target_timestamped/: girdfile.py  test_target_timestamped.py
test/unit/: test_rule.py
