[tool.poetry]
name = "gird"
version = "1.2.5"
description = "Make-like build tool & task runner for Python"
authors = ["Tuukka Ruhanen <tuukka.t.ruhanen@gmail.com>"]
homepage = "https://github.com/truhanen/gird"
repository = "https://github.com/truhanen/gird"
license = "MIT"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools"
]

[tool.poetry.scripts]
gird = "gird.gird:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
isort = "^5.11.4"
black = "^22.12.0"
jinja2 = "^3.1.2"
twine = "^4.0.2"
tomli = "^2.0.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

