[tool.poetry]
name = "gird"
version = "2.0.0"
description = "Make-like build tool & task runner for Python"
authors = ["Tuukka Ruhanen <tuukka.t.ruhanen@gmail.com>"]
homepage = "https://github.com/gird-dev/gird"
repository = "https://github.com/gird-dev/gird"
license = "MIT"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Build Tools"
]

[tool.poetry.scripts]
gird = "gird.gird:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
isort = "^5.11.4"
black = "^22.12.0"
jinja2 = "^3.1.2"
twine = "^4.0.2"
tomli = "^2.0.1"
pytest-xdist = "^3.2.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

